Correct table spatial alignment

--- a/src/styles/modules/sasmanager.less
+++ b/src/styles/modules/sasmanager.less
@@ -289,6 +289,7 @@ body {
   //float: right;
   padding: 1%;
   padding-left: 1.75%;
+  padding-right: 0.95%;
   //width: 72%;
   //height: 100%;
 }
